--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <input type="text" id="lname" name="lname">
     <label for="email">Email:</label>
     <input type="text" id="email" name="email">
-    <button type="summit">Summit</button>
+    <button type="summit">Send</button>
     <li>
     <ul>
     </form>
